--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@mui/x-data-grid": "^5.6.1",
     "@reduxjs/toolkit": "^1.8.0",
+    "@rsuite/icons": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -20,12 +24,15 @@
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-qr-code": "^2.0.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
+    "rsuite": "^5.14.0",
     "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
