--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
     "react-barcode-reader": "^0.0.2",
+    "react-confirm-alert": "^2.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-qr-code": "^2.0.7",
