--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-simple-keyboard": "^3.4.163",
     "redux-devtools-extension": "^2.13.9",
     "rsuite": "^5.14.0",
     "save-dev": "^0.0.1-security",
+    "simple-keyboard": "^3.4.119",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
