--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "save-dev": "^0.0.1-security",
     "simple-keyboard": "^3.4.119",
     "styled-components": "^5.3.3",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
