--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-barcode-reader": "^0.0.2",
     "react-confirm-alert": "^2.8.0",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.3.1",
     "react-qr-code": "^2.0.7",
     "react-redux": "^7.2.6",
