--- a/.github/workflows/build-prodution.yml
+++ b/.github/workflows/build-prodution.yml
@@ -27,7 +27,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: CI=false npm run package
-    - run: cd out/Shini Plus POS-win32-x64
+    - run: cd "out/Shini Plus POS-win32-x64"
     - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
