--- a/.github/workflows/build-prodution.yml
+++ b/.github/workflows/build-prodution.yml
@@ -27,6 +27,8 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: CI=false npm run package
+
+    - name: Auto release
     - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
