--- a/.github/workflows/build-prodution.yml
+++ b/.github/workflows/build-prodution.yml
@@ -27,3 +27,11 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: CI=false npm run package
+
+    - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.TOKEN_SECRET }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Production Build"
+          files: /out/*/**
