--- a/.github/workflows/build-prodution.yml
+++ b/.github/workflows/build-prodution.yml
@@ -31,7 +31,7 @@ jobs:
     - uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: ${{ secrets.TOKEN_SECRET }}
-          automatic_release_tag: "latest"
+          automatic_release_tag: latest
           prerelease: true
-          title: "Production Build"
+          title: Production Build
           files: /out/*/**
