--- a/.github/workflows/build-prodution.yml
+++ b/.github/workflows/build-prodution.yml
@@ -27,6 +27,7 @@ jobs:
         cache: 'npm'
     #- run: npm ci
     #- run: CI=false npm run package
+    - run: ls
 
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
@@ -34,4 +35,4 @@ jobs:
         automatic_release_tag: "latest"
         prerelease: true
         title: "Production Build"
-        files: **
+        files: /*
