--- a/.github/workflows/build-prodution.yml
+++ b/.github/workflows/build-prodution.yml
@@ -25,13 +25,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: $env:CI=$false; npm run package
-
-    - uses: vimtor/action-zip@v1
-      with:
-        files: ./out
-        dest: result.zip
+    # - run: npm ci
+    # - run: $env:CI=$false; npm run package
+    - run: tar.exe -a -c -f build.zip ./src
+    # - uses: vimtor/action-zip@v1
+    #   with:
+    #     files: ./out
+    #     dest: result.zip
 
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
