--- a/.github/workflows/build-prodution.yml
+++ b/.github/workflows/build-prodution.yml
@@ -27,7 +27,7 @@ jobs:
         cache: 'npm'
     # - run: npm ci
     # - run: $env:CI=$false; npm run package
-    - run: tar.exe -a -c -f build.zip ./src
+    - run: tar -a -c -f build.zip ./src
     # - uses: vimtor/action-zip@v1
     #   with:
     #     files: ./out
