--- a/.github/workflows/build-prodution.yml
+++ b/.github/workflows/build-prodution.yml
@@ -35,7 +35,7 @@ jobs:
 
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
-        repo_token: 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
+        repo_token: "${{ secrets.TOKEN_SECRET }}"
         automatic_release_tag: "latest"
         prerelease: true
         title: "Production Build"
