--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-simple-keyboard": "^3.4.163",
+    "react-slideshow-image": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "rsuite": "^5.14.0",
     "save-dev": "^0.0.1-security",
     "simple-keyboard": "^3.4.119",
+    "simple-keyboard-layouts": "^3.1.179",
     "styled-components": "^5.3.3",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
