--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "body-parser": "^1.20.2",
+    "bwip-js": "^3.4.0",
+    "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
+    "pdf-to-printer": "^5.6.0",
+    "pdfkit": "^0.13.0",
+    "qrcode": "^1.5.3",
     "react": "^17.0.2",
     "react-barcode-reader": "^0.0.2",
     "react-confirm-alert": "^2.8.0",
@@ -41,12 +49,14 @@
     "simple-keyboard": "^3.4.119",
     "simple-keyboard-layouts": "^3.1.179",
     "styled-components": "^5.3.3",
+    "unzipper": "^0.10.14",
+    "update-electron-app": "^2.0.1",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "concurrently -k \"npm start\" \"npm:electron\"",
-    "electron": "wait-on tcp:3000 && electron-forge start",
+    "dev": "concurrently -k \"npm start\" \"npm run electron\"",
+    "electron": "electron-forge start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
