--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-winstaller": "^5.1.0",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
     "pdf-to-printer": "^5.6.0",
@@ -62,6 +63,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "package": "react-scripts build && electron-forge package",
+    "installer": "react-scripts build && electron-forge package && node ./createWindowsInstaller.js",
     "make": "react-scripts build && electron-forge make"
   },
   "eslintConfig": {
@@ -97,7 +99,8 @@
     "forge": {
       "packagerConfig": {
         "icon": "src/icons/win/icon.ico",
-        "name": "plus-pos"
+        "name": "plus-pos",
+        "asar": true
       },
       "makers": [
         {
