--- a/.github/workflows/build-prodution.yml
+++ b/.github/workflows/build-prodution.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: $env:CI=$false; npm run package
+    - run: $env:CI=$false; npm run installer
 
 
     - uses: "marvinpinto/action-automatic-releases@latest"
