--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pos",
-  "version": "2.0.0",
+  "version": "2.0",
   "main": "public/electron.js",
   "author": "Al Shini Supermarket",
   "description": "Shini Plus POS Application for Terminals (Cashier)",
@@ -20,6 +20,7 @@
     "@mui/x-data-grid": "^5.6.1",
     "@reduxjs/toolkit": "^1.8.0",
     "@rsuite/icons": "^1.0.2",
+    "@terascope/fetch-github-release": "^0.8.7",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -33,7 +34,6 @@
     "electron-winstaller": "^5.1.0",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
-    "pdf-to-printer": "^5.6.0",
     "pdfkit": "^0.13.0",
     "qrcode": "^1.5.3",
     "react": "^17.0.2",
@@ -54,8 +54,6 @@
     "simple-keyboard": "^3.4.119",
     "simple-keyboard-layouts": "^3.1.179",
     "styled-components": "^5.3.3",
-    "unzipper": "^0.10.14",
-    "update-electron-app": "^2.0.1",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
