--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pos",
-  "version": "2.0a",
+  "version": "2.0",
   "main": "public/electron.js",
   "author": "Al Shini Supermarket",
   "description": "Shini Plus POS Application for Terminals (Cashier)",
