--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pos",
-  "version": "3.0.0",
+  "version": "3.1.4",
   "main": "public/electron.js",
   "author": "Al Shini Supermarket",
   "description": "Shini Plus POS Application for Terminals (Cashier)",
@@ -34,6 +34,7 @@
     "electron-webpack": "^2.8.2",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
+    "pdf-to-printer": "^5.6.0",
     "pdfkit": "^0.13.0",
     "qrcode": "^1.5.3",
     "react": "^17.0.2",
@@ -47,8 +48,11 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-simple-keyboard": "^3.4.163",
-    "react-slideshow-image": "^4.0.5",
+    "react-slideshow-image": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-state-sync": "^3.1.4",
+    "redux-thunk": "^2.4.2",
     "rsuite": "^5.14.0",
     "save-dev": "^0.0.1-security",
     "simple-keyboard": "^3.4.119",
