--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pos",
-  "version": "3.1.5",
+  "version": "3.2.0",
   "main": "public/electron.js",
   "author": "Al Shini Supermarket",
   "description": "Shini Plus POS Application for Terminals (Cashier)",
@@ -34,6 +34,7 @@
     "electron-webpack": "^2.8.2",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
+    "path": "^0.12.7",
     "pdf-to-printer": "^5.6.0",
     "pdfkit": "^0.13.0",
     "qrcode": "^1.5.3",
