--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "redux-thunk": "^2.4.2",
     "rsuite": "^5.14.0",
     "save-dev": "^0.0.1-security",
+    "serialport": "^12.0.0",
     "simple-keyboard": "^3.4.119",
     "simple-keyboard-layouts": "^3.1.179",
     "styled-components": "^5.3.3",
