--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pos",
-  "version": "3.4.4",
+  "version": "3.4.5",
   "main": "public/electron.js",
   "author": "Al Shini Supermarket",
   "description": "Shini Plus POS Application for Terminals (Cashier)",
@@ -75,6 +75,7 @@
   "build": {
     "appId": "shini.pos",
     "productName": "Dazzle POS",
+    "asar": false,
     "win": {
       "target": "NSIS",
       "icon": "build/icon.ico"
