--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pos",
-  "version": "3.5.8",
+  "version": "3.5.9",
   "main": "public/electron.js",
   "author": {
     "name": "Al Shini Supermarket",
@@ -58,6 +58,7 @@
     "react-scripts": "5.0.0",
     "react-simple-keyboard": "^3.4.163",
     "react-slideshow-image": "^4.2.1",
+    "react-window": "^1.8.10",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-state-sync": "^3.1.4",
@@ -69,8 +70,7 @@
     "simple-keyboard-layouts": "^3.1.179",
     "styled-components": "^5.3.3",
     "use-sound": "^4.0.1",
-    "web-vitals": "^2.1.4",
-    "ws": "^8.17.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "concurrently -k \"npm start\" \"electron ./public/electron.js\"",
