--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-scripts": "5.0.0",
     "react-simple-keyboard": "^3.4.163",
     "react-slideshow-image": "^4.2.1",
+    "react-window": "^1.8.10",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-state-sync": "^3.1.4",
@@ -69,7 +70,8 @@
     "simple-keyboard-layouts": "^3.1.179",
     "styled-components": "^5.3.3",
     "use-sound": "^4.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "winston": "^3.13.1"
   },
   "scripts": {
     "dev": "concurrently -k \"npm start\" \"electron ./public/electron.js\"",
