--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pos",
-  "version": "3.7.4",
+  "version": "3.7.5",
   "main": "public/electron.js",
   "author": {
     "name": "Al Shini Supermarket",
@@ -45,6 +45,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-to-printer": "^5.6.0",
     "pdfkit": "^0.13.0",
+    "pos": "file:",
     "qrcode": "^1.5.3",
     "react": "^17.0.2",
     "react-barcode-reader": "^0.0.2",
