--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pos",
-  "version": "4.0.0",
+  "version": "4.0.7",
   "main": "public/electron.js",
   "author": {
     "name": "Al Shini Supermarket",
@@ -29,9 +29,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "app-builder-bin": "^4.2.0",
     "axios": "^0.26.1",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "bwip-js": "^3.4.0",
+    "call-bind-apply-helpers": "^1.0.2",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
@@ -39,13 +41,13 @@
     "electron-webpack": "^2.8.2",
     "express": "^4.18.2",
     "fontkit": "^2.0.2",
+    "gopd": "^1.2.0",
     "node-fetch": "^3.3.1",
     "node-thermal-printer": "^4.4.2",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "pdf-to-printer": "^5.6.0",
     "pdfkit": "^0.13.0",
-    "pos": "file:",
     "qrcode": "^1.5.3",
     "react": "^17.0.2",
     "react-barcode-reader": "^0.0.2",
@@ -57,6 +59,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-simple-image-slider": "^2.4.1",
     "react-simple-keyboard": "^3.4.163",
     "react-slideshow-image": "^4.2.1",
     "react-window": "^1.8.10",
@@ -87,6 +90,15 @@
     "appId": "shini.pos",
     "productName": "Dazzle POS",
     "asar": true,
+    "files": [
+      "public/**/*",
+      "src/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
     "win": {
       "target": "NSIS",
       "icon": "build/icon.ico"
@@ -134,7 +146,7 @@
   "devDependencies": {
     "concurrently": "^7.0.0",
     "electron": "^17.4.11",
-    "electron-builder": "^23.6.0",
+    "electron-builder": "^25.1.8",
     "electron-devtools-installer": "^3.2.0",
     "wait-on": "^6.0.1"
   }
